@@ -9,7 +9,8 @@ Version 2.18.1
 
 * The following bugs are resolved with this release:
 
-  15073, 15128, 15909, 15996, 16150, 16169, 16387, 16510, 16885, 16916.
+  15073, 15128, 15909, 15996, 16150, 16169, 16387, 16510, 16885, 16916,
+  16943.
 
 Version 2.18
 
